--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "vue-swipeable",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
