--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "vue-swipeable",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "tslint -p tsconfig.json"
+    "lint": "tslint -p tsconfig.json",
+    "release": "standard-version"
   },
   "repository": {
     "type": "git",
